--- a/workdir/multiple_regression.ipynb
+++ b/workdir/multiple_regression.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_path = \n",
+    "csv_path = Path(\"/Users/cachin/Downloads/ConductivityPrediction/workdir/data/aminoacids.csv\")  # Ensure this path matches the actual location of your CSV file\n",
     "df_total = pl.read_csv(csv_path)"
    ]
   },
